# src/modules/accounts/dtos/IUpdateUserDTO.ts
@@ -3,11 +3,11 @@ import { Role } from "@prisma/client";
 export interface IUpdateUserDTO {
     id: string;
     name?: string;
-    last_name?: string;
+    lastName?: string;
     email?: string;
     role?: Role;
-    old_password?: string;
-    password?: string;
-    confirm_password?: string;
-    avatar_url?: string;
+    previousPassword?: string;
+    newPassword?: string;
+    confirmNewPassword?: string;
+    avatarUrl?: string;
 }
